[gd_scene load_steps=12 format=2]

[ext_resource path="res://sceneList/demo28_LaunchPad/Script/LaunchPadController.gd" type="Script" id=1]
[ext_resource path="res://sceneList/demo28_LaunchPad/Script/Game.gd" type="Script" id=2]
[ext_resource path="res://sceneList/demo20_DebugTool/prefab/font/fontLabel.tres" type="DynamicFont" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 color;

void fragment(){
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/color = Plane( 1, 1, 1, 1 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 color;

void fragment(){
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/color = null

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 color;

void fragment(){
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/color = null

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 color;

void fragment(){
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/color = null

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -8.0
margin_right = 16.0
margin_bottom = -8.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 440.0
margin_right = 232.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 3 )
text = "Speed"

[node name="speed" type="Label" parent="Label"]
margin_left = 160.0
margin_right = 392.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "Speed"

[node name="Label2" type="Label" parent="."]
margin_top = 512.0
margin_right = 232.0
margin_bottom = 560.0
custom_fonts/font = ExtResource( 3 )
text = "Level"

[node name="level" type="Label" parent="Label2"]
margin_left = 168.0
margin_right = 400.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "Level"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.261
margin_bottom = -141.12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="L1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 219.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Up"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 223.0
margin_right = 245.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="L2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 469.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Down"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 473.0
margin_right = 495.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="L3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 722.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Change speed"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 726.0
margin_right = 748.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="L4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 752.0
margin_right = 1080.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Change Combination"

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 327.0
margin_right = 1080.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.392
anchor_right = 1.0
anchor_bottom = 0.483

[node name="c1" type="ColorRect" parent="HBoxContainer"]
material = SubResource( 3 )
margin_right = 267.0
margin_bottom = 174.0
size_flags_horizontal = 3

[node name="c2" type="ColorRect" parent="HBoxContainer"]
material = SubResource( 6 )
margin_left = 271.0
margin_right = 538.0
margin_bottom = 174.0
size_flags_horizontal = 3

[node name="c3" type="ColorRect" parent="HBoxContainer"]
material = SubResource( 8 )
margin_left = 542.0
margin_right = 809.0
margin_bottom = 174.0
size_flags_horizontal = 3

[node name="c4" type="ColorRect" parent="HBoxContainer"]
material = SubResource( 10 )
margin_left = 813.0
margin_right = 1080.0
margin_bottom = 174.0
size_flags_horizontal = 3

[node name="GameLogic" type="Node" parent="."]

[node name="LaunchPadController" type="Node" parent="GameLogic"]
script = ExtResource( 1 )

[node name="A" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]
volume_db = -0.071

[node name="B" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]

[node name="C" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]

[node name="D" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]

[node name="E" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]

[node name="F" type="AudioStreamPlayer" parent="GameLogic/LaunchPadController"]

[node name="Timer" type="Timer" parent="GameLogic/LaunchPadController"]
process_mode = 0
autostart = true
